# netty-transport-iocp

./: .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: deploy-maven.yaml  test.yaml
buildSrc/src/main/kotlin/: Version.kt
buildSrc/src/main/kotlin/kr/jclab/gradlehelper/: ProcessHelper.kt
netty-transport-classes-iocp/: build.gradle.kts
netty-transport-classes-iocp/src/main/java/kr/jclab/netty/channel/iocp/: AbstractIocpChannel.java  AbstractNamedPipeChannel.java  AbstractNativePointer.java  AbstractWinHandle.java  Buffer.java  Errors.java  Iocp.java  IocpChannelConfig.java  IocpChannelOption.java  IocpCompletionContext.java  IocpEventLoop.java  IocpEventLoopGroup.java  IocpRecvByteAllocatorHandle.java  IocpRecvByteAllocatorStreamingHandle.java  IocpServerChannelConfig.java  MemoryLeakDetector.java  NamedPipeChannel.java  NamedPipeChannelConfig.java  NamedPipeServerChannel.java  NamedPipeServerChannelConfig.java  NamedPipeSocketAddress.java  Native.java  NativeOverlapped.java  NativePointer.java  NativeStaticallyReferencedJniMethods.java  OverlappedChannel.java  OverlappedEntry.java  OverlappedEntryArray.java  PeerCredentials.java  PreferredDirectByteBufAllocator.java  RefCount.java  WinHandle.java  WsaEventHandle.java  package-info.java
netty-transport-native-iocp/: build-native.bat  build.gradle.kts
netty-transport-native-iocp/src/main/c/: CMakeLists.txt  netty_iocp_native.c  netty_iocp_native.h  string_util.c  string_util.h
